parser / CSV write

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Byte-compiled / optimized / DLL files
+# My files
 slack/
+slack_data.csv
+
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
